--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="thinkster">
+<html ng-app="cbhbaseapp">
 <head>
-  <title>thinkster-django-angular-boilerplate</title>
+  <title>CBH Base App</title>
 
   <base href="/" />
 
