--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -16,4 +16,12 @@
 <script type="text/javascript" src="{% static 'lib/snackbarjs/snackbar.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'javascripts/cbhbaseapp.js' %}"></script>
+
+<script type="text/javascript" src="{% static 'javascripts/cbhbaseapp.config.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/cbhbaseapp.routes.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/authentication/authentication.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/authentication/services/authentication.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/register.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
+
 {% endcompress %}
