Added New Department App

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -24,4 +24,18 @@
 <script type="text/javascript" src="{% static 'javascripts/authentication/controllers/register.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/layout/layout.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/layout/controllers/navbar.controller.js' %}"></script>
+
+<script type="text/javascript" src="{% static 'javascripts/departments/departments.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/departments/services/departments.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/utils/utils.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/utils/services/snackbar.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/layout/controllers/index.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/departments/directives/departments.directive.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/departments/controllers/departments.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/departments/directives/department.directive.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/departments/controllers/new-department.controller.js' %}"></script>
+
+
 {% endcompress %}
